<resources>
    <string name="app_name">Organizze</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_hint">Ex: Salário mensal</string>
    <string name="value_hint">R$ 0,00</string>
    <string name="date_hint">Ex: 19/10/2020</string>
    <string name="category_hint">Ex: Salário</string>
    <string name="signin_title">Acesse sua conta</string>
    <string name="signin_button">Entrar</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Senha</string>
    <string name="signup_title">Crie sua conta grátis</string>
    <string name="name_hint">Nome</string>
    <string name="signup_button">Cadastrar</string>
    <string name="signup_termuses">Termos de uso</string>
    <string name="redirect_page_text1">Crie sua conta grátis</string>
    <string name="redirect_page_text2">Comece já! Junte-se a mais de meio \n milhão de pessoas</string>
    <string name="redirect_page_button">Cadastre-se</string>
    <string name="redirect_page_button2">Já tenho conta</string>
    <string name="intro1_text1">Organize suas contas \n de onde estiver</string>
    <string name="intro1_text2">Simples e fácil de usar e grátis</string>
    <string name="intro2_text1">Saiba para onde está indo seu dinheiro</string>
    <string name="intro2_text2">Categorizando seus lançamentos e vendo o \n destino de cada centavo</string>
    <string name="intro3_text1">Nunca mais esqueça de \n pagar uma conta</string>
    <string name="intro3_text2">Receba alertas quando quiser</string>
    <string name="intro4_text1">Tudo organizado, no \n no celular ou computador</string>
    <string name="intro4_text2">Use no seu smartphone e \n acessando pelo site</string>
    <string name="content_main_balance">R$ 0,00</string>
    <string name="content_main_name">Carregando…</string>
    <string name="content_main_description">saldo geral</string>
    <string name="alert_dialog_title">Excluir Movimentação da conta</string>
    <string name="alert_dialog_message">Você tem certeza que realmente deseja excluir essa movimentação?</string>
    <string name="alert_dialog_positive_text">Confirmar</string>
    <string name="alert_dialog_negative_text">Cancelar</string>
    <string name="weak_password">Digite uma senha mais forte</string>
    <string name="invalid_credentials">Por favor, digite um email válido</string>
    <string name="user_collision">E-mail já está em uso</string>
    <string name="generic_signup_error">Erro ao cadastrar usuário: %s</string>
    <string name="invalid_user">Usuário não existe</string>
    <string name="credential_mismatch">Senha incorreta</string>
    <string name="generic_signin_error">Erro ao logar usuário: %s</string>
    <string name="currency_placeholder">R$ %.2f</string>
    <string name="currency_placeholder_negative">- R$ %.2f</string>
</resources>